test/types/type_variables/deitz/functions/test_foo5-error.good
Error: Ambiguous call 'foo(float, 2.0, 4.0)' (test_foo5-error.chpl:16)
Candidates are:
  foo(type t, x: t, y: t) (test_foo5-error.chpl:1)
  foo(type t, x: t, y: float) (test_foo5-error.chpl:8)
